# stripboard

./: AUTHORS  README  TODO  autogen.sh  configure.in
m4/: Makefile.am
src/: Makefile.am  actions.c  actions.h  gui.c  gui.h  layers.c  layers.h  main.c  main.h  misc.c  misc.h  object.c  object.h  object_board.c  object_board.h  object_elcap.c  object_elcap.h  object_icsocket.c  object_icsocket.h  object_led.c  object_led.h  object_resistor.c  object_resistor.h  object_wire.c  object_wire.h  property.c  property.h  stripboard-ui.xml  tools.c  tools.h
tmpl/: object_from_template.sh  object_template.c  object_template.h
